infrastructure/headlamp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: headlamp
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: headlamp-CLUSTER.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port:
              number: 80
